# displays_list_5_operations

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
tests/: test_arrs.py
